# quantum-finance-slr

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  METHODS.md  README.md  audit_fn_sample.py  gen_missing_report.py  generate_figures.py  generate_missing_links.py  import_batch.py  pyproject.toml  resolve_discrepancies.py  run_benchmark_check.py  run_search.py  sample_check.txt  spot_check.py  update_included.py
01_protocol/: PRISMA_2020_checklist.md  PRISMA_S_checklist.md  amendment_a9_llm_screening.md  amendments_log.csv  amendments_log.md  protocol amendment a1.md  protocol.md  protocol_v1.0.md
02_search_logs/: benchmark_sensitivity_check.csv  search_peer_review.md  snowball_log.csv
05_screening/: ai_discrepancy_review.csv  ai_discrepancy_review_backup_20260330_121919.csv  ai_rescue_review.xlsx  ai_screening_decisions.csv  ai_validation_report.md  asreview_dataset.csv  asreview_prior_labels.csv  calibration_decisions.csv  calibration_log.md  calibration_screening.xlsx  exclusion_reason_codes.md  fn_audit_sample.csv  full_text_decisions.csv  full_text_decisions_template.csv  full_text_screening.xlsx  included_for_coding.csv  included_for_coding.csv.bak  llm_screening_checkpoint.json  llm_screening_prompt_log.jsonl  screening_reviewer_A.xlsx  screening_reviewer_B.xlsx  title_abstract_decisions.csv  title_abstract_decisions.csv.bak  title_abstract_decisions_template.csv  validation_screening.xlsx
06_extraction/: codebook.md  extraction_template.xlsx  tier1_review.xlsx  tier_classification.csv  tier_classification.csv.bak  tier_classification_summary.md  (+5 more)
(+145 files in other folders)
