[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-finance-slr"
version = "0.1.0"
description = "Two-stage systematic literature review toolkit for gate-based quantum computing in finance"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.1",
    "openpyxl>=3.1",
    "rispy>=0.9",
    "bibtexparser>=1.4",
    "openai>=1.40",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
fuzzy = ["rapidfuzz>=3.0"]
dev = ["pytest>=7.0", "rapidfuzz>=3.0"]
ai = ["scikit-learn>=1.3", "asreview>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.pytest.ini_options]
testpaths = ["tools/tests"]
